# anon_sbm

./: .gitignore  README.md  env_backup.yml  likelihood_test.py  repomix-output.txt  requirements.txt  setup.cfg  setup.py  tmp_test.py
configs/: noisy_surrogate_eval.yml  sbm_fit_block_size_experiments.yml  sbm_fit_k10.yml  surrogate_eval.yml
notebooks/: block_assigner_comparison_01-07-2025.ipynb  convergence_figures_25-06-2025.ipynb  likelihood_test.ipynb  move_type_comparisons_30-06-2025.ipynb  noisy_network_sampling_07-07-2025.ipynb  sbm_block_sizes_26-06-2025.ipynb  sbm_visualize.ipynb  surrogate_accuracy_26-06-2025.ipynb  visualize_generated_networks_08-07-2025.ipynb
planted_partitions/: private_parition.py  undirected_planted_partitions.py
processed/: eu_email.edgelist
results/: surrogate_metrics.csv
results/surrogate_statistics/: caltech_fb_surrogates_5_shortest_path_degree_clustering_cooling_rate_0_999_force_undirected_True_min_block_size_10_n_iter_5000_temperature_1_0.csv  caltech_fb_surrogates_5_shortest_path_degree_clustering_cooling_rate_0_999_force_undirected_True_min_block_size_12_n_iter_10000_temperature_1_0.csv  caltech_fb_surrogates_5_shortest_path_degree_clustering_cooling_rate_0_999_force_undirected_True_min_block_size_25_n_iter_10000_temperature_1_0.csv  caltech_fb_surrogates_5_shortest_path_degree_clustering_cooling_rate_0_999_force_undirected_True_min_block_size_3_n_iter_10000_temperature_1_0.csv  (+11 more)
slurm_scripts/: fit_sbm.sh
src/anon_sbm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/data_processing/: process_all.py  (+6 more)
(+97 files in other folders)
