[metadata]
name = anon-sbm
version = 0.1.0
author = Lasse Mohr
author_email = lmmi@dtu.dk
description = Package for SBM with minimum group-size constraints
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-repo-url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy

[options.packages.find]
where = src

