[metadata]
name = anon-sbm
version = 0.1.0
author = Lasse Mohr
author_email = lmmi@dtu.dk
description = Package for SBM with minimum group-size constraints
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.12.0
install_requires =
    numpy
    scipy
    networkx
    metis
    k-means-constrained
    nodevectors
    tqdm
    scikit-learn
    pytest

[options.packages.find]
where = src

